--- a/index.html
+++ b/index.html
@@ -22,22 +22,84 @@
 <script type="text/javascript" src="honor.js"></script>
 </head>
 <body class="container-fluid">
-	<header class="row">
-		<div class="col-12 jumbotron">
+	<a class="alert" href="news/covid-19.html">Our response to COVID-19</a>
+	<nav id="global-nav" class="row"><div class="col-12">
+		<img src="img/honor-logo.png" alt="Honor Software" />
+		<ul>
+			<li><a href="/about/">Why Honor</a></li>
+			<li><a href="/products/">Product</a></li>
+			<li><a href="/services/">Services</a></li>
+			<li><a href="/customers/">Customers</a></li>
+			<li><a href="/resources/">Resources</a></li>
+			<li><a href="/contact/">Contact Us</a></li>
+		</ul>
+	</div></nav>
+	<header id="marquee" class="row">
+		<div class="col-12 col-md-4">
 	  		<h1 class="display-4">Honor Software</h1>
 			<p class="lead">Beautiful, usable software for the future.</p>
-			<!-- <hr class="my-4">
-			<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
 		</div>
 	</header>
-	<section class="row">
-
+	<section class="row" id="news-featured">
+		<div class="col-12 col-md-6">
+			<!-- background graphic -->
+		</div>
+		<div class="col-12 col-md-6">
+			<h3>News Content</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<a class="btn btn-primary" href="/news/">Read the article</a>
+		</div>
 	</section>
-	<section class="row">
-
+	<section class="row promo-bar">
+		<a class="col-12 col-md-3" href="/news/">
+			<h5>Latest Updates</h5>
+		</a>
+		<a class="col-12 col-md-3" href="/stories/scheduleux.html">
+			<span>Transforming software research</span>
+		</a>
+		<a class="col-12 col-md-3" href="/news.">
+			<span>Learn how</span>
+		</a>
+		<a class="col-12 col-md-3" href="/news.">
+			<span>Customer Story: Hyperdrive Engineering</span>
+		</a>
 	</section>
-	<footer class="row">
+	<section class="row" id="honor-powered">
+		<div class="col-12">
+			<h5>Our team has worked with</h5>
+			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+				<div class="col">U.S. Government</div>
+				<div class="col">Amazon</div>
+				<div class="col">Apple</div>
+				<div class="col">Bluetooth</div>
+				<div class="col">Microsoft</div>
+				<div class="col">Walmart</div>
+				<div class="col">Seattle Pride</div>
+				<div class="col">Bob Books</div>
+				<div class="col col-sm-6 col-md col-lg-6">T&#8209;Mobile</div>
+				<div class="col col-sm-6 col-md col-lg-6"><a href="/contact/">Work With Us</a></div>
+			</div>
+		</div>
+	</section>
+	<section class="row promo-bar">
+		<a class="col-12 col-md-3">
+			<strong>##%</strong>
+			<span>detail</span>
+		</a>
+		<a class="col-12 col-md-3">
+			<strong>##%</strong>
+			<span>detail</span>
+		</a>
+		<a class="col-12 col-md-3">
+			<strong>##%</strong>
+			<span>detail</span>
+		</a>
+		<a class="col-12 col-md-3">
+			<strong>##%</strong>
+			<span>detail</span>
+		</a>
+	</section>
+	<footer id="global-footer" class="row">
 		<!-- Links -->
 		<div class="col-12 col-md-8">
 
