--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <meta name="format-detection" content="telephone=no">
 
 <!-- Libraries -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,600,700&display=swap" rel="stylesheet">
+<!-- bootstrap --><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- google fonts --><link href="https://fonts.googleapis.com/css?family=Raleway:300,600,700&display=swap" rel="stylesheet">
+<!-- font awesome --><link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous">
 
 <!-- Custom -->
 <link rel="stylesheet" type="text/css" href="honor.css"></style>
@@ -74,9 +75,9 @@
 				<div class="col">Bluetooth</div>
 				<div class="col">Microsoft</div>
 				<div class="col">Walmart</div>
+				<div class="col">T&#8209;Mobile</div>
 				<div class="col">Seattle Pride</div>
-				<div class="col">Bob Books</div>
-				<div class="col col-sm-6 col-md col-lg-6">T&#8209;Mobile</div>
+				<div class="col col-sm-6 col-md col-lg-6">Bob Books</div>
 				<div class="col col-sm-6 col-md col-lg-6"><a href="/contact/">Work With Us</a></div>
 			</div>
 		</div>
@@ -99,15 +100,63 @@
 			<span>detail</span>
 		</a>
 	</section>
-	<footer id="global-footer" class="row">
-		<!-- Links -->
-		<div class="col-12 col-md-8">
-
+	<section class="row">
+		<div class="col-12 col-md-6">
+			<h3>Accelerate your business</h3>
+			<p>Automating workflows Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p>
+			<a class="btn btn-primary" href="/news/automate-workflows.html">Read the article</a>
 		</div>
-		<!-- Contact -->
-		<div class="col-12 col-md-4">
-
+		<div class="col-12 col-md-6">
+			<!-- background graphic -->
 		</div>
+	</section>
+	<section class="row">
+		<div class="col-12 col-md-6">
+			<!-- background graphic -->
+		</div>
+		<div class="col-12 col-md-6">
+			<h3>Better Together</h3>
+			<p>Open-source technologies power incredible projects around the world, from Google's Chrome browser and Android OS to Twitter and a majority of the world's websites.</p>
+			<p>Learn more how open-source makes the difference in our report.</p>
+			<a class="btn btn-primary" href="/news/open-source.html">Read the report</a>
+		</div>
+	</section>
+	<section class="row">
+		<div class="col-12 col-md-6">
+			<h3>From conversations to collaborations,</h3>
+			<p>Our first project starts here</p>
+		</div>
+		<form class="col-12 col-md-6">
+			<div class="form-group">
+				<label for="nameInput">Name</label>
+				<input type="text" class="form-control" id="nameInput" autocomplete="name">
+			</div>
+			<div class="form-group">
+				<label for="companyInput">Company</label>
+				<input type="text" class="form-control" id="companyInput" autocomplete="company">
+			</div>
+			<div class="form-group">
+				<label for="emailInput">Email</label>
+				<input type="email" class="form-control" id="emailInput" autocomplete="work email" aria-describedby="emailHelp">
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			</div>
+			<div class="form-group">
+				<label for="phoneInput">Phone</label>
+				<input type="email" class="form-control" id="phoneInput" autocomplete="mobile tel">
+			</div>
+			<button class="btn btn-primary" type="submit">Send<i class="fas fa-paper-plane ml-2" aria-hidden="true"></i></button>
+		</form>
+	</section>
+	<footer id="global-footer" class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="col">
+			<a href="/contact/">Contact</a>
+			<a href="/news/">Honor News</a>
+			<a href="/careers/">Careers</a>
+			<a href="/legal/tos.html">Terms of Service</a>
+			<a href="/legal/privacy.html">Privacy</a>
+			<a id="language"><span>English</span><i class="far fa-angle-down" aria-label="language selector"></i></a>
+		</div>
+		<div class="alert">Copyright Honor Software &copy; 2020 – All rights reserved</div>
 	</footer>
 </body>
 </html>
