--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Config -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Honor Software</title>
+<title>Honor.Software</title>
 <meta property='og:image' content='images/web-preview.png'/>
 
 <!-- Content -->
@@ -37,7 +37,7 @@
 	</div></nav>
 	<header id="marquee" class="row">
 		<div class="col-12 col-md-4">
-	  		<h1 class="display-4">Honor Software</h1>
+	  		<h1 class="display-4">Honor.Software</h1>
 			<p class="lead">Beautiful, usable software for the future.</p>
 		</div>
 	</header>
@@ -156,7 +156,7 @@
 			<a href="/legal/privacy.html">Privacy</a>
 			<a id="language"><span>English</span><i class="far fa-angle-down" aria-label="language selector"></i></a>
 		</div>
-		<div class="alert">Copyright Honor Software &copy; 2020 – All rights reserved</div>
+		<div class="alert">Honor.Software &copy;2020 – All rights reserved</div>
 	</footer>
 </body>
 </html>
