adds font-awesome

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@700&family=BioRhyme:wght@700&family=Bitter:wght@700&family=Coustard&family=Eczar:wght@400;500;600;800&family=Kadwa:wght@700&family=Marcellus&family=Martel&family=Merriweather:wght@700&family=Nova+Square&family=Patua+One&family=Playfair+Display+SC:wght@900&family=Rhodium+Libre&family=Roboto+Slab&family=Sree+Krushnadevaraya&family=Voces&family=Volkhov:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
